just a few updates

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Top 5...</title>
+    <title>Top 5 songs that I can't turn off fast enough.</title>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/app.css"/>
     <script src="lib/angular.js"></script>
@@ -19,21 +19,29 @@
             My Top 5...
         </div>
         <div class="jumbotron">
-            <h1>...songs that I can't turn off fast enough.</h1>
+            <h1>Songs that I can't turn off fast enough.</h1>
             <p class="text-justify">What songs just make you cringe worse than fingers on a chalkboard?</p>
         </div>
         <div class="row response">
             <div class="panel panel-primary">
                 <div class="media panel-heading">
                     <a class="pull-left" href="#">
-                        <img class="img-circle" data-src="holder.js/64x64" alt="64x64">
+                        <div class="img-thumb-container">
+                            <img class="media-object img-thumb" src="../img/ed.jpg" alt="64x64">
+                        </div>
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">
                             Ed Castaneda
                             <div class="pull-right">
-                                <span class="glyphicon glyphicon-thumbs-up"></span>
-                                <span class="glyphicon glyphicon-thumbs-down"></span>
+                                <a href="javascript:void(0);" title="AWESOME!">
+                                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                                </a>
+                                <span>(149,042)</span>
+                                <a href="javascript:void(0);" title="BOO!!!">
+                                    <span class="glyphicon glyphicon-thumbs-down"></span>
+                                </a>
+                                <span>(2)</span>
                             </div>
                         </h4>
                         <div class="media">
